--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,7 @@
 }
 
 .dark {
-  --background: oklch(0.141 0.005 285.823);
+  --background: #011C27;
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.21 0.006 285.885);
   --card-foreground: oklch(0.985 0 0);
@@ -127,10 +127,7 @@
 body,
 #root,
 .layout,
-.home,
-.library,
-.setting,
-.user {
+.home {
   height: 100%;
   overflow: hidden;
 }
